--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@ Copyright © 2012-2014 Visual Illusions Entertainment
         <!-- Mods End -->
     </dependencies>
     <build>
-        <finalName>${project.name}-${project.version}</finalName>
+        <finalName>${project.name}-${project.version}${build.number}</finalName>
         <plugins>
             <!-- Timestamp for year -->
             <plugin>
